2009-04-08  Jaroslav Hajek  <highegg@gmail.com>

	* xpow.cc (elem_xpow (double, const Range&),
	elem_xpow (const Complex&, const Range&)): New functions.
	* xpow.h: Declare them.
	* OPERATORS/op-range.cc: Define scalar .^ range and complex .^ range &
	install them.

2009-04-04  Jaroslav Hajek  <highegg@gmail.com>

	* ov-struct.cc (octave_struct::subsasgn): Fix reference counting
	optimization.

2008-04-03  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/max.cc (MINMAX_SPARSE_BODY): Allow sparse boolean 
	values.

2009-04-01  Jaroslav Hajek  <highegg@gmail.com>

	* ov-str-mat.cc (default_numeric_conversion_function):
	Create an octave_scalar if possible.

2009-03-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/fltk_backend.cc (plot_window::button_press):
	Don't pass arbitrary input to fl_message as a format string.

2009-03-29  Jaroslav Hajek  <highegg@gmail.com>

	* pt-eval.cc (do_unwind_protect_cleanup_code): Protect also
	octave_interrupt_state.

2009-03-29  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/cellfun.cc (Fcellslices): Index n-d arrays along the
	last dimension.

2009-03-27  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/balance.cc (Fbalance): Fix order of output args.

2009-03-26  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/find.cc 
	(find_nonzero_elem_idx (const Array<T>&, ...)): Move dimensions
	fixup to liboctave.

2009-03-26  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/find.cc 
	(find_nonzero_elem_idx (const Array<T>&, ...)): Simplify.
	Instantiate for bool and octave_int types.
	(find_nonzero_elem_idx (const Sparse<T>&, ...)): 
	Instantiate for bool.
	(Ffind): Handle bool and octave_int cases.

2009-03-25  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 3.1.55+.
	(OCTAVE_API_VERSION): Now api-v37+.

	* version.h (OCTAVE_VERSION): Now 3.1.55.
	(OCTAVE_API_VERSION): Now api-v37.
	(OCTAVE_RELEASE_DATE): Now 2009-03-25.

	* DLD-FUNCTIONS/find.cc (find_nonzero_elem_idx): Also return